--- a/basic_HTML_challenges/HTML_challenge_1.html
+++ b/basic_HTML_challenges/HTML_challenge_1.html
@@ -13,12 +13,12 @@
     </title>
 
     <body>
-        <h1>Computer Science Resources</h1>
-
-        <a href="https://www.codehs.com" target="_blank">CodeHS</a>
-        <a href="https://wwww.code.org" target="_blank">Code.org</a>
-        <a href="https://wwww.https://stackoverflow.com/" target="_blank">Stack Overflow</a>   
-   
+        <h1 style="font-sie: 48px color: red">Computer Science Resources</h1>
+        <ul>
+        <li><a href="https://www.codehs.com" target="_blank">CodeHS</a></li>
+        <li><a href="https://wwww.code.org" target="_blank">Code.org</a></li>
+        <li><a href="https://wwww.https://stackoverflow.com/" target="_blank">Stack Overflow</a></li>   
+        </ul>
         <hr>
 
         <p>
