added img h1 thin

--- a/basic_HTML_challenges/HTML_challenge_1.html
+++ b/basic_HTML_challenges/HTML_challenge_1.html
@@ -1,19 +1,11 @@
 <!DOCTYPE html>
 <html>
-<!--Instructions: Change the formatting of the code below to match these instructions:
-1. Change the h1 to a color you like
-2. Make the h1 font size 48px
-3. Put the links into a list
-4. Make the h1 font weight lighter
-5. Add an image of a student coding after the paragraph of more info
-6. Add correct citations for the photo you've found-->
-
     <title>
     HTML Challenge 1
     </title>
 
     <body>
-        <h1 style="font-sie: 48px color: red">Computer Science Resources</h1>
+        <h1 style="font-size: 48px; font-weight:lighter; color:red;">Computer Science Resources</h1>
         <ul>
         <li><a href="https://www.codehs.com" target="_blank">CodeHS</a></li>
         <li><a href="https://wwww.code.org" target="_blank">Code.org</a></li>
@@ -26,6 +18,7 @@
                 More Info
             </strong>
         </p>
+        <img src="https://st2.depositphotos.com/1017228/9855/i/450/depositphotos_98555734-stock-photo-thoughtful-man-thinking-and-working.jpg" alt="Student Coding">
     </body>
 
 </html>
