changed h1, h2, links and background color

--- a/CSS_challenge_2/CSS_challenge_2.html
+++ b/CSS_challenge_2/CSS_challenge_2.html
@@ -1,9 +1,5 @@
 <!DOCTYPE html>
-<!--1. Update the colors of the page using these HEX values
-        A. Title color #885df1
-        B. Sub title color: #272044
-        C. Background color: #f6f2fe
-    2. Update the color of the links so they match the theme of the website-->
+
 <html>
     <head>
         <link rel="stylesheet" href="CSS_challenge_2.css">
@@ -12,26 +8,26 @@
         CSS Challenge 2
     </title>
 
-    <body>
-        <h1>
+    <body style="background: #CBC3E3;">
+        <h1 style="color: #885df1;">
             SheCodes
             </h1>
-           <h2>
+           <h2 style="color: #4B0150;">
               Coding Workshop
           </h2>
           <ul>
             <li>
-              <a href="https://www.shecodes.io/students" target="_blank" class="coders">
+              <a style= "color: #885df1;" href="https://www.shecodes.io/students" target="_blank" class="coders">
                 Coders
               </a>
             </li>
             <li>
-              <a href="https://www.shecodes.io/courses" target="_blank" class="courses">
+              <a style= "color: #885df1;" href="https://www.shecodes.io/courses" target="_blank" class="courses">
               Courses
               </a>
             </li>
             <li>
-              <a href="https://www.shecodes.io/stories" target="_blank" class="stories">
+              <a style= "color: #885df1;" href="https://www.shecodes.io/stories" target="_blank" class="stories">
                 Stories
                </a>
             </li>
@@ -43,6 +39,6 @@
             </strong>
           </p>
           
-          <img src="https://edge.alluremedia.com.au/m/g/2017/10/woman-coding.jpg" width="300"/>
+          <img src="https://media.istockphoto.com/id/1081869166/photo/tweaking-some-finer-details-in-the-data.jpg?b=1&s=170667a&w=0&k=20&c=78o0VKqLFFk4oUJ9c3WhMouxuRUF2ab-CKDfvVWN8FE=" width="300"/>
     </body>
 </html>
